@@ -3,9 +3,11 @@ package com.nl.icwdirectory.gateway.http.converter;
 import com.nl.icwdirectory.domain.Address;
 import com.nl.icwdirectory.gateway.http.json.CreateBusinessJson;
 import com.nl.icwdirectory.gateway.http.json.CsvBusiness;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -26,9 +28,13 @@ public class CsvToJsonConverter implements Converter<CsvBusiness, CreateBusiness
                 .website(source.getWebsite())
                 .phone(source.getPhone())
                 .logo(source.getLogo())
-                .images(List.of(source.getImages().split(",")))
+                .images(StringUtils.isNotEmpty(source.getImages())?
+                        List.of(source.getImages().split(",")):
+                        Collections.emptyList())
                 .description(source.getDescription())
-                .tags(List.of(source.getTags().split(",")))
+                .tags(StringUtils.isNotEmpty(source.getTags())?
+                        List.of(source.getTags().split(",")):
+                        Collections.emptyList())
                 .build();
     }
 
